src/objects/Proposal_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Contacts</relationshipLabel>
        <relationshipName>Proposal_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agency__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposal Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Proposal Contact</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Proposal Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>